--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!--App Stuff-->
     <script src="app/app.js"></script>
+    <script src="model/users.js"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
