temp commit with new data model

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!--App Stuff-->
     <script src="app/app.js"></script>
     <script src="model/users.js"></script>
+    <script src="model/course.js"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
