--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="coursoramaApp">
+<html lang="en" ng-app="coursomaticApp">
 
 <head>
     <title></title>
@@ -17,17 +17,71 @@
     <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
 
     <!--App Stuff-->
     <script src="app/app.js"></script>
     <script src="model/users.js"></script>
     <script src="model/course.js"></script>
+    <script src="app/home/homeCtrl.js"></script>
+    <script src="model/login/loginCtrl.js"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body ng-controller="MainCtrl">
-   <h1>hello</h1> 
-   <p>{{4+5}}
+ <!--  
+   <nav class="navbar navbar-default navbar-static-top" role="navigation">
+       <a class="navbar-brand logo" href="#">Coursomatic</a>
+       <ul class="nav navbar-nav pull-right">
+           <li class="">
+               <a class="login-button" href="#">Login</a>
+           </li>
+       </ul>
+   </nav> -->
+<nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand logo" href="#">Coursomatic</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+			<ul id="login-dp" class="dropdown-menu">
+				<li>
+					 <div class="row">
+							<div class="col-md-12">
+								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
+											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+										</div>
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputPassword2">Password</label>
+											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+										</div>
+										<div class="form-group">
+											 <button type="submit" class="btn btn-primary btn-block">Let me in</button>
+										</div>
+								 </form>
+							</div>
+					 </div>
+				</li>
+			</ul>
+        </li>
+      </ul>
+  </div><!-- /.container-fluid -->
+</nav>
+
+<ng-view></ng-view> 
 </body>
 
 </html>
