login and open gallery implemented - course constructor not yet!

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 
     <!--App Stuff-->
     <script src="app/app.js"></script>
@@ -25,7 +27,10 @@
     <script src="model/course.js"></script>
     <script src="app/home/homeCtrl.js"></script>
     <script src="model/login/loginCtrl.js"></script>
+    <script src="model/gallery/galleryCtrl.js"></script>
     <link href="css/style.css" rel="stylesheet">
+    <link href="model/login/login.css" rel="stylesheet">
+    <link href="model/gallery/gallery.css" rel="stylesheet">
 </head>
 
 <body ng-controller="MainCtrl">
