designed the gallery html

--- a/model/gallery/gallery.html
+++ b/model/gallery/gallery.html
@@ -1,9 +1,13 @@
-<div class="container">
-        <div class="row">
+<div class="my-gallery">
+    
+    <div class="container">
+        <div class="row ">
         <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h1 class="gallery-title">Courses</h1>
         </div>
-
+        <div align="center">
+            <img src="birds/bird6.jpg" class="img-responsive img-circle user-icon" alt="Image">
+        </div>
         <div align="center">
             <button class="btn btn-default filter-button" data-filter="all">All</button>
             <button class="btn btn-default filter-button" data-filter="hdpe">Your Courses</button>
@@ -11,24 +15,39 @@
         </div>
         <br/>
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-                <img src="../../pics/monday_morning.jpg" class="img-responsive">
+               <div class="well" >
+                <img src="../../pics/Mon1.jpg" class="img-responsive gallery-item">
+                <figcaption>Monday Morning 10:00 - 13:30</figcaption>
+                </div>             
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-                <img src="../../pics/monday_evening.jpg" class="img-responsive">
+                <div class="well">
+                <img src="../../pics/Mon2.jpg" class="img-responsive gallery-item">
+                <figcaption>Monday Evening 17:45 - 21:15</figcaption>
+                </div>
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
-                <img src="../../pics/tuesday.jpg" class="img-responsive">
+                <div class="well">
+                <img src="../../pics/Tue.jpg" class="img-responsive gallery-item">
+                <figcaption>Tuesday Morning 10:00 - 13:30</figcaption>
+                </div>
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="../../pics/wednesday.jpg" class="img-responsive">
+                <div class="well">
+                <img src="../../pics/Wed.jpg" class="img-responsive gallery-item">
+                <figcaption>Wednesday Morning 10:00 - 13:30</figcaption>
+                </div>
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter spray">
-                <img src="../../pics/thursday.jpg" class="img-responsive">
+                <div class="well">
+                <img src="../../pics/Thu.jpg" class="img-responsive gallery-item">
+                <figcaption>Thursday Morning 10:00 - 13:30</figcaption>
+                </div>
             </div>
         </div>
     </div>
-
+</div>
