--- a/model/gallery/gallery.html
+++ b/model/gallery/gallery.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row ">
         <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h1 class="gallery-title">Courses</h1>
+            <h1 class="gallery-title">Let's start - choose a course</h1>
         </div>
         <div align="center">
             <img src="birds/bird6.jpg" class="img-responsive img-circle user-icon" alt="Image">
