timeline design started

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <script src="app/home/homeCtrl.js"></script>
     <script src="model/login/loginCtrl.js"></script>
     <script src="model/gallery/galleryCtrl.js"></script>
+    <script src="model/timeline/timelineCtrl.js"></script>
     <link href="css/style.css" rel="stylesheet">
     <link href="model/login/login.css" rel="stylesheet">
     <link href="model/gallery/gallery.css" rel="stylesheet">
+    <link href="model/timeline/timeline.css" rel="stylesheet">
 </head>
 
 <body ng-controller="MainCtrl">
