--- a/model/gallery/gallery.html
+++ b/model/gallery/gallery.html
@@ -16,7 +16,7 @@
         <br/>
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
                <div class="well" >
-                <img src="../../pics/Mon1.jpg" class="img-responsive gallery-item">
+                <img src="../../pics/Mon1.jpg" class="img-responsive gallery-item" onclick="toTimeline()">
                 <figcaption>Monday Morning 10:00 - 13:30</figcaption>
                 </div>             
             </div>
