gallery built from JSON file, start of timeline display design

--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
     <!--App Stuff-->
     <script src="app/app.js"></script>
     <script src="model/users.js"></script>
+    <script src="model/session.js"></script>
     <script src="model/course.js"></script>
     <script src="app/home/homeCtrl.js"></script>
-    <script src="model/login/loginCtrl.js"></script>
-    <script src="model/gallery/galleryCtrl.js"></script>
-    <script src="model/timeline/timelineCtrl.js"></script>
+    <script src="app/login/loginCtrl.js"></script>
+    <script src="app/gallery/galleryCtrl.js"></script>
+    <script src="app/timeline/timelineCtrl.js"></script>
     <link href="css/style.css" rel="stylesheet">
-    <link href="model/login/login.css" rel="stylesheet">
-    <link href="model/gallery/gallery.css" rel="stylesheet">
-    <link href="model/timeline/timeline.css" rel="stylesheet">
+    <link href="app/login/login.css" rel="stylesheet">
+    <link href="app/gallery/gallery.css" rel="stylesheet">
+    <link href="app/timeline/timeline.css" rel="stylesheet">
 </head>
 
 <body ng-controller="MainCtrl">
