new home page design tested

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,27 +1,12 @@
-
-<div class="jumbotron">
-    <div class="container">
-        <div class="my-header" >
-            <div class="container-fluid text-center">
-                <h1>Coursomatic</h1>
-                <p>No more headache managing attendance to your lessons.<br> Use Coursomatic and let the students manage their attendance by themselves</p>
-                <p>
-                    <a class="btn btn-primary btn-lg" ng-click="login()">Let Me In</a>
-                </p>
-        </div>
-    </div>
-</div>
-
- <div class="my-container">
-    	<div id="carousel">
-			<figure><img src="pics/carousel_pics/paper_mache_july_2016_497.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/img_148.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/paper_mache_january_2016_117.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/paper_mache_bawlABBB.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/paper_mache_july_2016_821.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/papier_mache_may_2013_083.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/paper_mache_july_2016_565.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/paper_mache_december_2012_218.jpg" alt=""></figure>
-			<figure><img src="pics/carousel_pics/paper_mache_january_2014_598.jpg" alt=""></figure> 
-		</div>
-	</div>
+  <div class="jumbotron my-background">
+      <div class="container">
+          <h1 class="logo">Coursomatic</h1>
+          <p>No more headache managing attendance to your courses <br>
+            By using Coursomatic, Teachers and Students are partners in this task <br>
+            Create Courses, Add Students and Start enjoying
+          </p>
+          <p>
+              <a class="btn btn-primary btn-lg login-btn" ng-click="login()">Let Me In</a>
+          </p>
+      </div>
+  </div>
