--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <!--timeline style-->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 
     <!--App Stuff-->
     <script src="app/app.js"></script>
@@ -45,10 +48,10 @@
                <a class="login-button" href="#">Login</a>
            </li>
        </ul>
-   </nav> -->
+   </nav> 
 <nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+    <!-- Brand and toggle get grouped for better mobile display 
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
@@ -59,7 +62,7 @@
       <a class="navbar-brand logo" href="#">Coursomatic</a>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
+    <!-- Collect the nav links, forms, and other content for toggling 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
@@ -86,8 +89,9 @@
 			</ul>
         </li>
       </ul>
-  </div><!-- /.container-fluid -->
+  </div><!-- /.container-fluid 
 </nav>
+-->
 
 <ng-view></ng-view> 
 </body>
