usersArr and CoursesArr fixed, now available for gallery controller

--- a/app/gallery/gallery.html
+++ b/app/gallery/gallery.html
@@ -12,12 +12,9 @@
         </a>
     </div>
 </div>
-<div class ="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9" ng-repeat = "session in sessionsArr()">
-  {{session.date}}
-</div>  
-  
-<!--
-<div class ="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9" ng-repeat = "session from sessionsArr()">
+
+
+<div class ="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9" ng-repeat = "session in allSessionsArr">
     <div class="panel-body">
       <div class="rsvp col-xs-2 col-sm-2">
         <i>bla</i>
