--- a/app/newUser/newUser.html
+++ b/app/newUser/newUser.html
@@ -55,7 +55,7 @@
                     <button type="reset" class="btn btn-primary btn-block">Cancel</button>                   
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <button type="submit" class="btn btn-primary btn-block">Save</button>
+                    <button type="submit" class="btn btn-primary btn-block" ng-click="saveUser()">Save</button>
                 </div>
             </div>
         </div>
