1/8/17 end of day commit - gallery display in process

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li ng-show="isLoggedIn()"><a href="#!/userProfile">My Profile</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li ng-hide="isLoggedIn()"><a href="#" ng-click="">Login</a></li>
+                <li ng-hide="isLoggedIn()"><a href="#" ng-click="login()">Login</a></li>
                 <li ng-show="isLoggedIn()"><a href="#" ng-click="logout()">Logout</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
