--- a/app/gallery/gallery.html
+++ b/app/gallery/gallery.html
@@ -1,35 +1,42 @@
 <div class="attendance-galery">
-<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 ">
-    <div class="list-group menu" ng-repeat="course in courses">
-        <a href="#" class="list-group-item course-item">
-           <div class="course-image">
-               <img src="{{course.courseUrl}}" class="img-circle"/>
-           </div>  
-            <div class="course-title">    
-                <h4>{{course.name}}</h4>
-                <p>{{course.desc}}</p>
-            </div>
-        </a>
+<div class="course-list">
+    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+        <div class="list-group menu" ng-repeat="course in courses">
+            <a href="#" class="list-group-item course-item">
+            <div class="course-image">
+                <img src="{{course.courseUrl}}" class="img-circle"/>
+            </div>  
+                <div class="course-title">    
+                    <h4>{{course.name}}</h4>
+                    <p>{{course.desc}}</p>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
 
-
-<div class ="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9" ng-repeat = "session in allSessionsArr">
-    <div class="panel-body">
-      <div class="rsvp col-xs-2 col-sm-2">
-        <i>bla</i>
-        <i>{{session.date}}</i>
-        <div class="hidden-xs">
-          <span class="fa fa-thumbs-up fa-2x"></span>
-          <span class="fa fa-thumbs-down fa-2x"></span>
+<div class="session-list">
+    <div class ="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9" ng-repeat = "session in allSessionsArr">
+        <div class="panel-body">
+            <div class="rsvp col-xs-2 col-sm-2">
+                <i>bla</i>
+                <i>{{session.date}}</i>
+                <div class="hidden-xs">
+                <span class="fa fa-thumbs-up fa-2x"></span>
+                <span class="fa fa-thumbs-down fa-2x"></span>
+                </div>
+            </div>
+            <div class="info col-xs-8 col-sm-7">
+                Monday Morning
+                <div class="hidden-xs">
+                    <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#location" aria-controls="location" role="tab" data-toggle="tab">Schedule</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="info col-xs-8 col-sm-7">
-        Monday Morning
-        <div class="hidden-xs">
-            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#location" aria-controls="location" role="tab" data-toggle="tab">Schedule</a></li>
-            </ul>
+    </div>
+</div>
             <!-- Tab panes 
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="location"> 10:00 - 13:30</div>
