--- a/app/gallery/gallery.html
+++ b/app/gallery/gallery.html
@@ -1,25 +1,32 @@
 <div class="attendance-galery">
+    <div class = "gallery-btns col-sm-12">
+        <div class="btn-group">
+            <label class="btn btn-default|primary|success|info|warning|danger" ng-model="dasModel" uib-btn-radio="'All'" uncheckable active>All</label>
+            <label class="btn btn-default|primary|success|info|warning|danger" ng-model="dasModel" uib-btn-radio="'my-courses'" uncheckable>My Courses</label>
+            <label class="btn btn-default|primary|success|info|warning|danger" ng-model="dasModel" uib-btn-radio="'other-courses'" uncheckable>Other Courses</label>
+        </div>
+    </div>
 <div class="course-list">
     <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <div class="list-group menu" ng-repeat="course in courses">
+        <div class="list-group menu category-click" data-filter = "{{course.name}}" ng-repeat="course in courses">
             <a href="#" class="list-group-item course-item">
             <div class="course-image">
-                <img src="{{course.courseUrl}}" class="img-circle"/>
+                <img ng-src="{{course.courseUrl}}" class="img-circle"/>
             </div>  
-                <div class="course-title">    
-                    <h4>{{course.name}}</h4>
-                    <p>{{course.desc}}</p>
-                </div>
+             <div class="course-title">    
+                 <h4>{{course.name}}</h4>
+                 <p>{{course.desc}}</p>
+              </div>
             </a>
         </div>
     </div>
 </div>
 
 <div class="session-list">
-    <div class ="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9" ng-repeat = "session in allSessionsArr">
+    <div class ="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9 all" ng-repeat = "session in allSessionsArr">
         <div class="panel-body">
             <div class="rsvp col-xs-2 col-sm-2">
-                <i>bla</i>
+              <!--  <i></i> -->
                 <i>{{session.date}}</i>
                 <div class="hidden-xs">
                 <span class="fa fa-thumbs-up fa-2x"></span>
@@ -27,10 +34,10 @@
                 </div>
             </div>
             <div class="info col-xs-8 col-sm-7">
-                Monday Morning
+                {{session.name}}
                 <div class="hidden-xs">
                     <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#location" aria-controls="location" role="tab" data-toggle="tab">Schedule</a></li>
+                    <li role="presentation" class="active"><a href="#location" aria-controls="location" role="tab" data-toggle="tab">Students</a></li>
                     </ul>
                 </div>
             </div>
