--- a/app/newUser/newUser.html
+++ b/app/newUser/newUser.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form class="form-horizontal" role="form">
-        <h2>New User</h2>
+        <h2>New Student</h2>
         <div class="form-group">
             <label for="firstName" class="col-sm-3 control-label">First Name</label>
             <div class="col-sm-9">
@@ -28,37 +28,35 @@
         <div class="form-group">
             <label for="email" class="col-sm-3 control-label">Email</label>
             <div class="col-sm-9">
-                <input type="email" id="email" placeholder="Email" class="form-control" ng-model="User.email" >
+                <input type="email" id="email" placeholder="Email" class="form-control" ng-model="User.email">
             </div>
         </div>
         <div class="form-group">
             <label for="password" class="col-sm-3 control-label">Password</label>
             <div class="col-sm-9">
-                <input type="password" id="password" placeholder="Password" class="form-control" ng-model="User.password" >
+                <input type="password" id="password" placeholder="Password" class="form-control" ng-model="User.password">
             </div>
         </div>
         <div class="form-group">
             <label for="course" class="col-sm-3 control-label">Course</label>
             <div class="col-sm-9">
-                <select id="course" class="form-control" ng-model="User.firstName" ng-model="User.courseId" >
-                    <option>Monday Morning</option>
-                    <option>Monday Evening</option>
-                    <option>Tuesday</option>
-                    <option>Wednesday</option>
-                    <option>Thursday</option>
+                <select id="course" class="form-control" ng-model="User.firstName" ng-model="User.courseId">
+                    <option ng-repeat="course in courses">{{course.name}}</option>
                 </select>
             </div>
-        </div> <!-- /.form-group -->
+        </div>
+        <!-- /.form-group -->
         <div class="form-group">
             <div class="col-sm-9 col-sm-offset-3">
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <button type="reset" class="btn btn-primary btn-block">Cancel</button>                   
+                    <button type="reset" class="btn btn-primary btn-block" ng-click="cancel()">Cancel</button>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                     <button type="submit" class="btn btn-primary btn-block" ng-click="saveUser()">Save</button>
                 </div>
             </div>
         </div>
-    </form> <!-- /form -->
-</div> <!-- ./container -->     
-
+    </form>
+    <!-- /form -->
+</div>
+<!-- ./container -->
