--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </button>
             <a class="navbar-brand" href="#!/">Coursorama</a>
         </div>
-    
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
@@ -62,11 +62,12 @@
                 <li ng-hide="isLoggedIn()"><a href="#" ng-click="login()">Login</a></li>
                 <li ng-show="isLoggedIn()"><a href="#" ng-click="logout()">Logout</a></li>
             </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
+        <!-- /.navbar-collapse -->
     </nav>
 
 
-<ng-view></ng-view> 
+    <ng-view></ng-view>
 </body>
 
 </html>
