--- a/app/gallery/gallery.html
+++ b/app/gallery/gallery.html
@@ -22,32 +22,56 @@
         </div>
     </div>
 
+    <!-- calendar start -->
+    <!--    <div class="my-calendar">
+        <div class="row">
+            <div class="col-md-8">
+                <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar">
+                    <div id='external-events'>
+                        <ul>
+                            <li class='fc-event' ng-repeat="event in events">{{event.title}}</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div ng-show="SelectedEvent" class="alert alert-sucess" style="margin-top:50px">
+                        <h2 style="margin-top:0px">Selected Course:</h2>
+                        <p> {{SelectedEvent.students}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+-->
     <div class="session-list">
+
         <div class="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9 all" ng-repeat="session in allSessionsArr">
             <div class="panel-body">
                 <div class="rsvp col-xs-2 col-sm-2">
-                    <!--  <i></i> -->
-                    <i>{{session.date}}</i>
+                    <i>{{session.start.getUTCDate()}} {{session.month}}</i>
+                    <i><small>{{session.start.toLocaleTimeString()}}</small></i>
                 </div>
                 <div class="hidden-xscol-xs-2 col-sm-2">
                     <div class="col-sm-4">
-                        <span class="fa fa-thumbs-up fa-2x"></span>
+                        <span class="fa fa-thumbs-up fa-2x" ng-click="addUser(session)"></span>
                     </div>
                     <div class="col-sm-4">
-                        <span class="fa fa-thumbs-down fa-2x"></span>
+                        <a class="fa fa-thumbs-down fa-2x" ng-click="removeUser(session)"></a>
                     </div>
                 </div>
 
                 <div class="info col-xs-8 col-sm-8">
                     {{session.name}}
                     <div class="hidden-xs">
-                        <span class="student-list">Students: {{session.students}}</span>
+                        <p class="student-list">Students: {{session.students.toString()}}</p>
+                        <p><span class="student-list" style="color:#99c2ff;">Added Students: {{session.added.toString()}}</span>
+                            <span class="student-list" style="color:red;">Removed Students: {{session.removed.toString()}}</span>
+                            <p </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Tab panes 
+        <!-- Tab panes 
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="location"> 10:00 - 13:30</div>
             </div>
@@ -61,4 +85,3 @@
     </div>
 </div>
 </div>
--->
