--- a/app/newUser/newUser.html
+++ b/app/newUser/newUser.html
@@ -4,48 +4,48 @@
         <div class="form-group">
             <label for="firstName" class="col-sm-3 control-label">First Name</label>
             <div class="col-sm-9">
-                <input type="text" id="firstName" placeholder="First Name" class="form-control" ng-model="User.firstName" autofocus>
+                <input type="text" id="firstName" placeholder="First Name" class="form-control" ng-model="newUser.firstName" autofocus>
             </div>
         </div>
         <div class="form-group">
             <label for="lastName" class="col-sm-3 control-label">Last Name</label>
             <div class="col-sm-9">
-                <input type="text" id="lastName" placeholder="Last Name" class="form-control" ng-model="User.lastName" autofocus>
+                <input type="text" id="lastName" placeholder="Last Name" class="form-control" ng-model="newUser.lastName">
             </div>
         </div>
         <div class="form-group">
             <label for="phone" class="col-sm-3 control-label">Phone Number</label>
             <div class="col-sm-9">
-                <input type="text" id="phone" placeholder="Phone number" class="form-control" ng-model="User.phone" autofocus>
+                <input type="text" id="phone" placeholder="Phone number" class="form-control" ng-model="newUser.phone">
             </div>
         </div>
         <div class="form-group">
             <label for="city" class="col-sm-3 control-label">City</label>
             <div class="col-sm-9">
-                <input type="text" id="city" placeholder="City" class="form-control" ng-model="User.city" autofocus>
+                <input type="text" id="city" placeholder="City" class="form-control" ng-model="newUser.city">
             </div>
         </div>
         <div class="form-group">
             <label for="email" class="col-sm-3 control-label">Email</label>
             <div class="col-sm-9">
-                <input type="email" id="email" placeholder="Email" class="form-control" ng-model="User.email">
+                <input type="email" id="email" placeholder="Email" class="form-control" ng-model="newUser.email">
             </div>
         </div>
         <div class="form-group">
             <label for="password" class="col-sm-3 control-label">Password</label>
             <div class="col-sm-9">
-                <input type="password" id="password" placeholder="Password" class="form-control" ng-model="User.password">
+                <input type="password" id="password" placeholder="Password" class="form-control" ng-model="newUser.password">
             </div>
         </div>
         <div class="form-group">
             <label for="course" class="col-sm-3 control-label">Course</label>
             <div class="col-sm-9">
-                <select id="course" class="form-control" ng-model="User.firstName" ng-model="User.courseId">
+                <select id="course" class="form-control" ng-model="newUser.courseId">
                     <option ng-repeat="course in courses">{{course.name}}</option>
                 </select>
             </div>
         </div>
-        <!-- /.form-group -->
+
         <div class="form-group">
             <div class="col-sm-9 col-sm-offset-3">
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
