changed the gallery - not finished yet

--- a/app/gallery/gallery.html
+++ b/app/gallery/gallery.html
@@ -1,87 +1,69 @@
-<div class="attendance-galery">
-    <div class="text-center">
-        <div class="btn-group col-sm-12">
-            <label class="btn btn-default|primary|success|info|warning|danger" ng-model="courseFilter" uib-btn-radio="'all'" center-block uncheckable active>All</label>
-            <label class="btn btn-default|primary|success|info|warning|danger" ng-model="courseFilter" uib-btn-radio="'my-courses'" center-block uncheckable>My Courses</label>
-            <label class="btn btn-default|primary|success|info|warning|danger" ng-model="courseFilter" uib-btn-radio="'other-courses'" center-block uncheckable>Other Courses</label>
-        </div>
-    </div>
-    <div class="course-list">
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-            <div class="list-group menu category-click" ng-repeat="course in courses ">
-                <a href="#" class="list-group-item course-item">
-                    <div class="course-image">
-                        <img ng-src="{{course.courseUrl}}" class="img-circle" />
-                    </div>
-                    <div class="course-title" id="selCourse">
-                        <h4>{{course.name}}</h4>
-                        <p>{{course.desc}}</p>
-                    </div>
-                </a>
+<div class="attendance-galery col-sm-3">
+    <div class="panel-group" id="accordion">
+        <div class="panel panel-default" ng-repeat="course in courses">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#!/gallery">
+                        {{course.name}}</a>
+                </h4>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse in">
+                <div class="panel-body" ng-repeat="session in course.sessionsData" ng-click="selectSession(session)">{{session.start.getUTCDate()}} {{session.month}}</div>
             </div>
         </div>
-    </div>
-
-    <!-- calendar start -->
-    <!--    <div class="my-calendar">
-        <div class="row">
-            <div class="col-md-8">
-                <div id="calendar" ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar">
-                    <div id='external-events'>
-                        <ul>
-                            <li class='fc-event' ng-repeat="event in events">{{event.title}}</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div ng-show="SelectedEvent" class="alert alert-sucess" style="margin-top:50px">
-                        <h2 style="margin-top:0px">Selected Course:</h2>
-                        <p> {{SelectedEvent.students}}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
--->
-    <div class="session-list">
-
-        <div class="panel panel-default event col-xs-9 col-sm-9 col-md-9 col-lg-9 all" ng-repeat="session in allSessionsArr | filter:sessionFilter">
-            <div class="panel-body">
-                <div class="rsvp col-xs-2 col-sm-2">
-                    <i>{{session.start.getUTCDate()}} {{session.month}}</i>
-                    <i><small>{{session.start.toLocaleTimeString()}}</small></i>
-                </div>
-                <div class="hidden-xscol-xs-2 col-sm-2">
-                    <div class="col-sm-4">
-                        <span class="fa fa-thumbs-up fa-2x" ng-click="addUser(session)"></span>
-                    </div>
-                    <div class="col-sm-4">
-                        <a class="fa fa-thumbs-down fa-2x" ng-click="removeUser(session)"></a>
-                    </div>
-                </div>
-
-                <div class="info col-xs-8 col-sm-8">
-                    {{session.name}}
-                    <div class="hidden-xs">
-                        <p class="student-list">Students: {{session.students.toString()}}</p>
-                        <p><span class="student-list" style="color:#99c2ff;">Added Students: {{session.added.toString()}}</span>
-                            <span class="student-list" style="color:red;">Removed Students: {{session.removed.toString()}}</span>
-                            <p </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Tab panes 
-            <div class="tab-content">
-              <div role="tabpanel" class="tab-pane active" id="location"> 10:00 - 13:30</div>
-            </div>
-          </div>
-      </div>
-      <div class="author col-xs-2 col-sm-3">
-          <div class="profile-image">
-              <img src="pics/Mon1.jpg"/>
-          </div>      
-      </div>
     </div>
 </div>
+<div class=" col-sm-9">
+    <div class="hidden-xs">
+        <div class="col-sm-1">
+            <a class="fa fa-thumbs-up fa-2x" ng-click="addUser(session)"></a>
+        </div>
+        <div class="col-sm-1">
+            <a class="fa fa-thumbs-down fa-2x" ng-click="removeUser(session)"></a>
+        </div>
+    </div>
+    <div class="sessionDetails ng-show" id="sessionDetails">
+        <h4>{{sessionTitle}} - {{sessionStart}}</h4>
+
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#!/gallery">
+                            Registered Students</a>
+                    </h4>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse in">
+                    <div class="panel-body" ng-repeat="student in registeredStudents">{{student}}</div>
+                </div>
+
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#!/gallery">
+                            Added Students</a>
+                    </h4>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse in">
+                    <div class="panel-body" ng-repeat="student in addedStudents">{{student}}</div>
+                </div>
+
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#!/gallery">
+                            Removed Students</a>
+                    </h4>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse in">
+                    <div class="panel-body" ng-repeat="student in removedStudents">{{student}}</div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
 </div>
